--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,7 +1,13 @@
+// Breakpoints:
+
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
+// Fonts:
+
 $base-font-family: Titillium Web;
+
+// Colours:
 
 $instock-black: #13182c;
 $instock-indigo: #2e66e5;
