--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -22,22 +22,25 @@
   font-weight: 400;
   color: $instock-black;
   font-size: 0.6875rem;
+  line-height: 1rem;
 }
 
 @mixin body-medium-mobile() {
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 400;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 0.8125rem;
+  line-height: 1.25rem;
 }
 
 @mixin body-large-mobile() {
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 400;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 0.9375rem;
+  line-height: 1.625rem;
 }
 
 @mixin table-header-mobile() {
@@ -46,30 +49,34 @@
   font-weight: 400;
   color: $slate;
   font-size: 0.6875rem;
+  line-height: 1rem;
 }
 
 @mixin labels-mobile() {
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 600;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 0.8125rem;
+  line-height: 1.25rem;
 }
 
 @mixin sub-header-mobile() {
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 600;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 @mixin page-header-mobile() {
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 600;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 1.75rem;
+  line-height: 2.25rem;
 }
 
 // Tablet:
@@ -80,6 +87,7 @@
   font-weight: 400;
   color: $instock-black;
   font-size: 0.75rem;
+  line-height: 1.125rem;
 }
 
 @mixin body-medium-tablet() {
@@ -88,6 +96,7 @@
   font-weight: 400;
   color: $instock-black;
   font-size: 0.875rem;
+  line-height: 1.375rem;
 }
 
 @mixin body-large-tablet() {
@@ -96,6 +105,7 @@
   font-weight: 400;
   color: $instock-black;
   font-size: 1rem;
+  line-height: 1.75rem;
 }
 
 @mixin table-header-tablet() {
@@ -104,6 +114,7 @@
   font-weight: 400;
   color: $slate;
   font-size: 0.75rem;
+  line-height: 1.125rem;
 }
 
 @mixin labels-tablet() {
@@ -112,6 +123,7 @@
   font-weight: 600;
   color: $instock-black;
   font-size: 0.875rem;
+  line-height: 1.375rem;
 }
 
 @mixin sub-header-tablet() {
@@ -120,6 +132,7 @@
   font-weight: 600;
   color: $instock-black;
   font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 @mixin page-header-tablet() {
@@ -128,4 +141,5 @@
   font-weight: 600;
   color: $instock-black;
   font-size: 2rem;
+  line-height: 2.5rem;
 }
