--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -28,7 +28,7 @@
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 400;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 0.8125rem;
 }
 
@@ -36,7 +36,7 @@
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 400;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 0.9375rem;
 }
 
@@ -44,7 +44,7 @@
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 400;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 0.6875rem;
 }
 
@@ -52,7 +52,7 @@
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 600;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 0.8125rem;
 }
 
@@ -60,7 +60,7 @@
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 600;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 1.25rem;
 }
 
@@ -68,7 +68,7 @@
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 600;
-  color: $brainflix-black;
+  color: $instock-black;
   font-size: 1.75rem;
 }
 
