--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -44,7 +44,7 @@
   font-family: $base-font-family;
   font-style: normal;
   font-weight: 400;
-  color: $instock-black;
+  color: $slate;
   font-size: 0.6875rem;
 }
 
