--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -1,112 +1,121 @@
-@use "../../styles/partials/resets" as *;
+@use "../../styles/partials/breakpoints" as *;
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.inventory{
-    color: $instock-black;
-    background-color: $light-grey;
+.inventory {
+  color: $instock-black;
+  background-color: $light-grey;
 
-    &__title {
-        @include page-header-mobile();
+  &__title {
+    @include page-header-mobile();
+  }
+
+  &__search {
+    padding: 2.5rem 1rem 1.5rem 1rem;
+  }
+
+  &__section {
+    border-top: 1px solid $cloud;
+  }
+
+  &__card {
+    &-info {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
+  &__div {
+    width: 50%;
+    margin: 1rem 1rem 0 1rem;
+    @include body-medium-mobile;
+
+    // &--ghost {
+    //     display: none;
+    // }
+
+    &-title {
+      @include body-small-mobile;
+      font-weight: 600;
+      color: $slate;
     }
 
-    &__search {
-        padding: 2.5rem 1rem 1.5rem 1rem;
+    &-link {
+      &-chevron {
+        position: absolute;
+        left: 5.033125rem;
+      }
     }
 
-    &__section{
-        border-top: 1px solid $cloud;
+    &-info {
+        // color: $green;
     }
 
-    &__card{
-
-        &-info{
-            display: flex;
-            justify-content: space-between;
-        }
+    &-info--container {
+        border: 1px ;
+        border-radius: 20px;
+        background-color: $green;
+        // opacity: 7%;
     }
-
-    &__div{
-        width: 50%;
-        margin: 1rem 1rem 0 1rem;
-        @include body-medium-mobile;
-
-        &-title{
-            @include body-small-mobile;
-            font-weight: 600;
-            color: $slate;
-        }
-
-        &-link{
-
-            &-chevron{
-                position: absolute;
-                left: 5.033125rem; 
-            }
-        }
-
-        &-info{
-
-        }
+  }
 
 
-    }
-    &__buttons{
+  &__buttons {
     display: flex;
     justify-content: space-between;
     margin: 1rem 1rem 0 1rem;
     padding-bottom: 1rem;
-    }
+  }
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.search{
-    width: 100%;
-    // padding: 0 1rem;
-    margin: 1rem 0;
+.search {
+  width: 100%;
+  // padding: 0 1rem;
+  margin: 1rem 0;
 
-    &__container{
-        display: flex;
-        justify-content: center;
-    }
-    &__bar{
-        width: 100%;
-        height: 36px;
-        border-radius: 20px;
-        border: 1px solid $cloud;
-
-        &-image{
-            position: absolute;
-            right: 1.8rem;
-            top: 1.4rem;
-        }
-        
-        &::placeholder{
-            position: relative;
-            left: 1rem;
-            color: $slate;
-        }
-    }
-}
-
-.addition{
+  &__container {
+    display: flex;
+    justify-content: center;
+  }
+  &__bar {
     width: 100%;
     height: 36px;
+    border-radius: 20px;
+    border: 1px solid $cloud;
+
+    &-image {
+      position: absolute;
+      right: 1.8rem;
+      top: 1.4rem;
+    }
+
+    &::placeholder {
+      position: relative;
+      left: 1rem;
+      color: $slate;
+    }
+  }
+}
+
+.addition {
+  width: 100%;
+  height: 36px;
+  display: flex;
+  align-items: center;
+
+  &__button {
+    color: $white;
+  }
+
+  &__container {
+    margin: 0 1rem 1rem 1rem;
+    border-radius: 20px;
     display: flex;
-    align-items: center;
-
-    &__button{
-        color: $white;
-    }
-
-    &__container{
-        margin: 0 1rem 1rem 1rem;
-        border-radius: 20px;
-        display: flex;
-        justify-content: center;
-        background-color: $instock-indigo;
-    }
+    justify-content: center;
+    background-color: $instock-indigo;
+  }
 }
