--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -56,6 +56,7 @@
         border-radius: 20px;
         background-color: $green;
         // opacity: 7%;
+        background: rgba(3, 172, 240, 0.5);
     }
   }
 
