--- a/src/components/WarehouseDetails/warehousedetails.scss
+++ b/src/components/WarehouseDetails/warehousedetails.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   padding: 1rem 2rem;
   border-bottom: 1px solid $cloud;
+  align-items: center;
 
   @include tablet {
     padding: 2rem;
@@ -19,6 +20,9 @@
 
   &__icon {
     padding-right: 0.5rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
   }
 
   &__name {
