--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -6,19 +6,23 @@
   color: $instock-black;
   background-color: $light-grey;
 
+  &__container {
+    padding: 2.5rem 1rem 1.5rem 1rem;
+  }
+
   &__title {
     @include page-header-mobile();
   }
 
-  &__search {
-    padding: 2.5rem 1rem 1.5rem 1rem;
-  }
-
-  &__section {
-    border-top: 1px solid $cloud;
+  &__search-container {
+    display: flex;
+    justify-content: center;
   }
 
   &__card {
+    padding: 1rem;
+    border-top: 1px solid $cloud;
+
     &-info {
       display: flex;
       justify-content: space-between;
@@ -27,96 +31,84 @@
 
   &__div {
     width: 50%;
-    margin: 1rem 1rem 0 1rem;
+    padding-bottom: 1rem;
     @include body-medium-mobile;
 
-    // &--ghost {
-    //     display: none;
-    // }
+    &-container {
+      display: flex;
+      align-items: center;
+    }
 
     &-title {
       @include body-small-mobile;
       font-weight: 600;
       color: $slate;
+      padding-bottom: 0.3rem;
     }
 
     &-link {
-      &-chevron {
-        position: absolute;
-        left: 5.033125rem;
-      }
     }
 
-    &-info {
-        // color: $green;
+    &-info--status {
+      color: $green;
+      // padding-left: 0.1rem;
+      // padding-right: 0.1rem;
     }
 
     &-info--container {
-        border: 1px ;
-        border-radius: 20px;
-        background-color: $green;
-        // opacity: 7%;
-        background: rgba(3, 172, 240, 0.5);
+      border: 1px;
+      border-radius: 20px;
+      background: rgba(21, 132, 99, 0.07);
+      width: 3.5rem;
+      text-align: center;
     }
   }
-
 
   &__buttons {
     display: flex;
     justify-content: space-between;
-    margin: 1rem 1rem 0 1rem;
-    padding-bottom: 1rem;
   }
-}
 
-a {
-  text-decoration: none;
-}
-
-.search {
-  width: 100%;
-  // padding: 0 1rem;
-  margin: 1rem 0;
-
-  &__container {
-    display: flex;
-    justify-content: center;
-  }
-  &__bar {
+  &__button-sub-container {
     width: 100%;
     height: 36px;
-    border-radius: 20px;
-    border: 1px solid $cloud;
-
-    &-image {
-      position: absolute;
-      right: 1.8rem;
-      top: 1.4rem;
-    }
-
-    &::placeholder {
-      position: relative;
-      left: 1rem;
-      color: $slate;
-    }
+    display: flex;
+    align-items: center;
   }
-}
-
-.addition {
-  width: 100%;
-  height: 36px;
-  display: flex;
-  align-items: center;
 
   &__button {
     color: $white;
   }
 
-  &__container {
-    margin: 0 1rem 1rem 1rem;
+  &__button-container {
     border-radius: 20px;
     display: flex;
     justify-content: center;
     background-color: $instock-indigo;
   }
+
+  &__search {
+    width: 100%;
+    margin: 1rem 0;
+
+    &-bar {
+      width: 100%;
+      height: 36px;
+      border-radius: 20px;
+      border: 1px solid $cloud;
+      background-image: url("../../assets/images/Icons/search-24px.svg");
+      background-repeat: no-repeat;
+      background-position: center right 5%;
+
+      &::placeholder {
+        position: relative;
+        left: 1rem;
+        color: $slate;
+      }
+    }
+  }
+}
+
+a {
+  text-decoration: none;
 }
