--- a/src/components/SelectedWarehouseInventory/SelectedWarehouseInventory.scss
+++ b/src/components/SelectedWarehouseInventory/SelectedWarehouseInventory.scss
@@ -37,88 +37,39 @@
       padding-bottom: 0.3rem;
     }
 
-    &-link {
-    }
-
-    &-info--outstock {
-    //   color: $red;
-      // padding-left: 0.1rem;
-      // padding-right: 0.1rem;
-    }
-
     &-info--outstock-container {
+      @include body-small-mobile();
       color: $red;
       border: 1px;
       border-radius: 20px;
       background: rgba(201, 69, 21, 0.07);
-      width: 3.5rem;
+      width: 5rem;
+      padding-top: 0.2rem;
+      padding-bottom: 0.2rem;
+      font-weight: 600;
       text-align: center;
     }
 
-    &-info--instock {
-       
-        // padding-left: 0.1rem;
-        // padding-right: 0.1rem;
-      }
-  
-      &-info--instock-container {
-        color: $green;
+    &-info--instock-container {
+      @include body-small-mobile();
+      color: $green;
+      border: 1px;
+      border-radius: 20px;
+      background: rgba(21, 132, 99, 0.07);
+      width: 3.5rem;
+      padding-top: 0.2rem;
+      padding-bottom: 0.2rem;
+      font-weight: 600;
+      text-align: center;
+    }
+  }
 
-        border: 1px;
-        border-radius: 20px;
-        background: rgba(21, 132, 99, 0.07);
-        width: 3.5rem;
-        text-align: center;
-      }
-
-
+  &__link {
+    text-decoration: none;
   }
 
   &__buttons {
     display: flex;
     justify-content: space-between;
   }
-
-  &__button-sub-container {
-    width: 100%;
-    height: 36px;
-    display: flex;
-    align-items: center;
-  }
-
-  &__button {
-    color: $white;
-  }
-
-  &__button-container {
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    background-color: $instock-indigo;
-  }
-
-  &__search {
-    width: 100%;
-    margin: 1rem 0;
-
-    &-bar {
-      width: 100%;
-      height: 36px;
-      border-radius: 20px;
-      border: 1px solid $cloud;
-      background-image: url("../../assets/images/Icons/search-24px.svg");
-      background-repeat: no-repeat;
-      background-position: center right 5%;
-
-      &::placeholder {
-        position: relative;
-        left: 1rem;
-        color: $slate;
-      }
-    }
-  }
-}
-
-a {
-  text-decoration: none;
 }
