--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -4,7 +4,7 @@
 
 .main{
     color: $instock-black;
-    background-color: $light-grey;
+    // background-color: $light-grey;
 
     &__section{
         border-top: 1px solid $cloud;
