--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,16 @@
 @use "./styles/partials/resets";
+@use "./styles/partials/variables" as *;
 
 .main-section {
     margin: -4rem 1rem 1rem 1rem;
-    border: 2px solid red;
+    border: none;
     border-radius: 5px;
-    background-color: white;
+    background-color: $white;
+    box-shadow: 0px 2px 5px 0px rgba(19, 24, 44, 0.1);
+    z-index: 2;
+
+}
+
+body {
+    background-color: $light-grey;
 }
