--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -57,6 +57,11 @@
     justify-content: space-between;
     margin: 1rem 1rem 0 1rem;
     padding-bottom: 1rem;
+
+    &--delete {
+        border: none;
+        background-color: $white;
+    }
     }
 }
 
