Adding edit item component

--- a/src/components/DeleteWarehouse/deletewarehouse.scss
+++ b/src/components/DeleteWarehouse/deletewarehouse.scss
@@ -79,6 +79,7 @@
     width: 24px;
     height: 24px;
     margin-bottom: 1.5rem;
+    cursor: pointer;
 
     @include tablet {
       margin: 0;
@@ -101,6 +102,7 @@
     background-color: transparent;
     border-radius: 20px;
     margin-right: 0.5rem;
+    cursor: pointer;
 
     @include tablet {
       // width: 15%;
@@ -116,6 +118,7 @@
     color: $white;
     border-radius: 20px;
     margin-left: 0.5rem;
+    cursor: pointer;
 
     @include tablet {
       // width: 15%;
