--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -4,7 +4,7 @@
 
 .inventory {
   color: $instock-black;
-  background-color: $light-grey;
+  background-color: $white;
 
   &__container {
     padding: 2rem 1.5rem 1.5rem 1.5rem;
