Various fixes for buttons/Links and styling

--- a/src/components/EditWarehouse/EditWarehouse.scss
+++ b/src/components/EditWarehouse/EditWarehouse.scss
@@ -8,6 +8,10 @@
     display: flex;
     border-bottom: 1px solid $cloud;
   }
+  &__backArrow-link{
+    display: flex;
+    align-items: center;
+  }
 
   &__title {
     @include page-header-mobile();
