Edited delete-button to pointer on hover in inventory list

--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -192,6 +192,9 @@
   &__delete-button {
     border: none;
     background-color: $white;
+    :hover{
+      cursor: pointer;
+    }
   }
 
   &__search {
