--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -153,6 +153,7 @@
   &__buttons {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   &__button-sub-container {
